--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "vue-loader": "^16.1.2"
     },
     "dependencies": {
+        "chart.js": "^3.5.1",
         "primeicons": "^4.1.0",
         "primevue": "^3.7.0"
     }
