--- a/.env.example
+++ b/.env.example
@@ -1,51 +1,49 @@
-APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:5iMX1x1E6o4a5Fg8hfSsgQ/LHlhPFPSm2memc0U2Os0=
 APP_DEBUG=true
+APP_LOG_LEVEL=debug
+APP_LOGO_INICIO=https://s3-sa-east-1.amazonaws.com/gm-repositorio/images/logo/logo_inicio.png
+APP_LOGO_WHITE=https://s3-sa-east-1.amazonaws.com/gm-repositorio/images/logo/logo_inicio.png
 APP_URL=http://localhost
 
-LOG_CHANNEL=stack
-LOG_LEVEL=debug
-
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=db
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=gestion_de_moda
+DB_USERNAME=user
+DB_PASSWORD=root
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
-FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-
-MEMCACHED_HOST=127.0.0.1
+SESSION_DRIVER=file
+QUEUE_DRIVER=database
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
+MAIL_DRIVER=smtp
+MAIL_HOST=mailtrap.io
+MAIL_PORT=2525
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
 MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
-
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
 
 PUSHER_APP_ID=
-PUSHER_APP_KEY=
-PUSHER_APP_SECRET=
-PUSHER_APP_CLUSTER=mt1
+PUSHER_KEY=
+PUSHER_SECRET=
 
-MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
-MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+FACEBOOK_CLIENT_ID=XXXXXXXXX
+FACEBOOK_CLIENT_SECRET=XXXXXXXXXXXXXXXX
+
+TIENDA_NUBE_URL=XXXXXXXXXXXXXXX
+TIENDA_NUBE_CLIENT_ID=XXXX
+TIENDA_NUBE_CLIENT_SECRET=XXX
+TIENDA_NUBE_API_URL=xxxxxxxxxxxxxxxxx
+
+AFIP=xxxxxxxxxxxxxxxxx
+
+SES_KEY=xxxxxxxxxxxxxxxxx
+SES_SECRET=xxxxxxxxxxxxxxxxx
+SES_REGION=xxxxxxxxxxxxxxxxx
